Add comparison to bending rigidity measurements

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -901,6 +901,27 @@
   language = {en}
 }
 
+@ARTICLE{Fouchard2020-km,
+  title = {Curling of epithelial monolayers reveals coupling between active
+  bending and tissue tension},
+  author = {Fouchard, Jonathan and Wyatt, Tom P J and Proag, Amsha and Lisica,
+  Ana and Khalilgharibi, Nargess and Recho, Pierre and Suzanne, Magali and
+  Kabla, Alexandre and Charras, Guillaume},
+  journaltitle = {Proc. Natl. Acad. Sci. U. S. A.},
+  volume = {117},
+  issue = {17},
+  pages = {9377--9383},
+  date = {2020-04-28},
+  doi = {10.1073/pnas.1917838117},
+  pmc = {PMC7196817},
+  pmid = {32284424},
+  issn = {0027-8424,1091-6490},
+  url = {http://dx.doi.org/10.1073/pnas.1917838117},
+  keywords = {Myosin II contractility; active torques; curling; epithelial
+  morphogenesis; tissue mechanics;Cephalic furrow mechanics},
+  language = {en}
+}
+
 @ARTICLE{Wang2021-iy,
   title = {The origin and the mechanism of mechanical polarity during epithelial
   folding},
@@ -1375,6 +1396,23 @@
   note = {Figures and videos for: Pre-patterned epithelial invagination prevents
   mechanical instability during fly gastrulation},
   keywords = {Supporting datasets;Cephalic furrow mechanics}
+}
+
+@ARTICLE{Efrati2009-ve,
+  title = {Elastic theory of unconstrained non-Euclidean plates},
+  author = {Efrati, E and Sharon, E and Kupferman, R},
+  journaltitle = {J. Mech. Phys. Solids},
+  publisher = {Elsevier BV},
+  volume = {57},
+  issue = {4},
+  pages = {762--775},
+  date = {2009-04-01},
+  doi = {10.1016/j.jmps.2008.12.004},
+  issn = {0022-5096,1873-4782},
+  url = {http://dx.doi.org/10.1016/j.jmps.2008.12.004},
+  urldate = {2024-10-10},
+  keywords = {Cephalic furrow mechanics},
+  language = {en}
 }
 
 @ARTICLE{Cadigan1994-hz,
