Edit text and panels for comparative gene expression

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -987,6 +987,26 @@
   language = {en}
 }
 
+@ARTICLE{Cheatle-Jarvela2020-go,
+  title = {Regulatory gene function handoff allows essential gene loss in
+  mosquitoes},
+  author = {Cheatle Jarvela, Alys M and Trelstad, Catherine S and Pick, Leslie},
+  journaltitle = {Commun. Biol.},
+  publisher = {Springer Science and Business Media LLC},
+  volume = {3},
+  issue = {1},
+  pages = {540},
+  date = {2020-09-30},
+  doi = {10.1038/s42003-020-01203-w},
+  pmc = {PMC7528073},
+  pmid = {32999445},
+  issn = {2399-3642,2399-3642},
+  url = {https://www.nature.com/articles/s42003-020-01203-w},
+  urldate = {2023-12-12},
+  keywords = {Cephalic furrow mechanics},
+  language = {en}
+}
+
 @ARTICLE{Nelson2016-gz,
   title = {On Buckling Morphogenesis},
   author = {Nelson, Celeste M},
@@ -1055,6 +1075,28 @@
   url = {https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btw413},
   keywords = {Cephalic furrow mechanics},
   language = {en}
+}
+
+@ARTICLE{Cheatle-Jarvela2023-gd,
+  title = {Anterior-posterior patterning of segments in {\textit{Anopheles
+  stephensi}} offers insights into the transition from sequential to
+  simultaneous segmentation in holometabolous insects},
+  author = {Cheatle Jarvela, Alys M and Trelstad, Catherine S and Pick, Leslie},
+  journaltitle = {J. Exp. Zool. B Mol. Dev. Evol.},
+  publisher = {Wiley},
+  volume = {340},
+  issue = {2},
+  pages = {116--130},
+  date = {2023-03},
+  doi = {10.1002/jez.b.23102},
+  pmc = {PMC9061899},
+  pmid = {34734470},
+  issn = {1552-5007,1552-5015},
+  url = {https://onlinelibrary.wiley.com/doi/10.1002/jez.b.23102},
+  keywords = {Anopheles; evo-devo; gene regulatory network; mosquito; pair-rule
+  patterning; segmentation;Cephalic furrow mechanics;foxG = sloppy paired},
+  language = {en},
+  origdate = {2021-11-03}
 }
 
 @SOFTWARE{RStudio-Team2011-vj,
@@ -1222,6 +1264,25 @@
   url = {https://ieeexplore.ieee.org/document/9387490},
   urldate = {2023-02-13},
   keywords = {Cephalic furrow mechanics}
+}
+
+@ARTICLE{Strobl2022-og,
+  title = {In toto light sheet fluorescence microscopy live imaging datasets of
+  \textit{{Ceratitis capitata}} embryonic development},
+  author = {Strobl, Frederic and Schetelig, Marc F and Stelzer, Ernst H K},
+  journaltitle = {Sci. Data},
+  publisher = {Springer Science and Business Media LLC},
+  volume = {9},
+  issue = {1},
+  pages = {340},
+  date = {2022-06-15},
+  doi = {10.1038/s41597-022-01443-x},
+  pmc = {PMC9200851},
+  pmid = {35705572},
+  issn = {2052-4463},
+  url = {https://www.nature.com/articles/s41597-022-01443-x},
+  keywords = {Cephalic furrow mechanics},
+  language = {en}
 }
 
 @ARTICLE{Sander1985-sg,
